--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "laravel/laravel",
+	"name": "Yves01/dashboard",
 	"minimum-stability": "dev-master",
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
