--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"frozennode/administrator": "dev-master",
+		"frozennode/administrator": "dev",
 		"illuminate/html": "~5.0",
 		"doctrine/dbal": "~2.5",
 		"twbs/bootstrap": "~3.3",
