--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "yves01/dashboard",
-	"minimum-stability": "dev-master",
+	"minimum-stability": "dev",
 	"description": "Dashboard with Laravel and Laravel Administrator Framework.",
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
